--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1>Kemal Ramadhan</h1>
                 <p>a <b>Frontend & Backend Web</b> Developer based in Bandung, Indonesia.</p>
                 <div class="line-content media-info">
-                    <a href="" class="link-none"><img src="assets/images/icons/linkedin-logo.png" alt="github"></a>
+                    <a href="https://www.linkedin.com/in/kemal-ramadhan-704475312/" target="_blank" class="link-none"><img src="assets/images/icons/linkedin-logo.png" alt="github"></a>
                     <a href="https://github.com/kemal-ramadhan" target="_blank" class="link-none"><img src="assets/images/icons/github-sign.png" alt="github"></a>
                 </div>
             </div>
@@ -189,6 +189,7 @@
        <!-- kontak -->
         <div class="jumbo box hidden top-space-xxxl" id="contact">
             <div class="content-center-line">
+                <a href="https://maps.app.goo.gl/M9HKQJN53zvm78AHA" target="_blank" class="link-none">
                 <div class="box-kontak">
                     <div class="box-image">
                         <img src="assets/images/icons/pin.png" alt="location">
@@ -198,7 +199,9 @@
                         <p>Bandung, Indonesia</p>
                     </div>
                 </div>
+                </a>
                 
+                <a href="mailto:km.kemal03@gmail.com" target="_blank" class="link-none">
                 <div class="box-kontak">
                     <div class="box-image">
                         <img src="assets/images/icons/email.png" alt="location">
@@ -208,7 +211,9 @@
                         <p>km.kemal03@gmail.com</p>
                     </div>
                 </div>
+                </a>
                 
+                <a href="https://api.whatsapp.com/send/?phone=628986004677&text&type=phone_number&app_absent=0" target="_blank" class="link-none">
                 <div class="box-kontak">
                     <div class="box-image">
                         <img src="assets/images/icons/whatsapp.png" alt="location">
@@ -218,6 +223,7 @@
                         <p>+62 898-600-4677</p>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
 
@@ -227,8 +233,8 @@
                     Copyrights © 2024. All rights are reserved
                 </div>
                 <div class="line-content media-info">
-                    <a href="" class="link-none"><img src="assets/images/icons/linkedin.png" alt="github"></a>
-                    <a href="" class="link-none"><img src="assets/images/icons/github-sign white.png" alt="github"></a>
+                    <a href="https://www.linkedin.com/in/kemal-ramadhan-704475312/" target="_blank" class="link-none"><img src="assets/images/icons/linkedin.png" alt="github"></a>
+                    <a href="https://github.com/kemal-ramadhan" target="_blank" class="link-none"><img src="assets/images/icons/github-sign white.png" alt="github"></a>
                 </div>
             </div>
         </div>
